--- a/QuotesApi/QuotesApi.csproj
+++ b/QuotesApi/QuotesApi.csproj
@@ -9,6 +9,7 @@
     <Folder Include="Models\" />
     <Folder Include="Controllers\" />
     <Folder Include="Data\" />
+    <Folder Include="Scripts\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.2" />
@@ -20,5 +21,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Xml" Version="2.2.0" />
   </ItemGroup>
 </Project>
