--- a/QuotesApi/QuotesApi.csproj
+++ b/QuotesApi/QuotesApi.csproj
@@ -22,5 +22,6 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Xml" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.ResponseCaching" Version="2.2.0" />
   </ItemGroup>
 </Project>
