--- a/QuotesApi/QuotesApi.csproj
+++ b/QuotesApi/QuotesApi.csproj
@@ -23,5 +23,6 @@
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Xml" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.ResponseCaching" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.11" />
   </ItemGroup>
 </Project>
